<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="clickHandle"
            type="com.testapp.utils.HandleClick" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/select_options"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/serviceBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_button"
            android:onClick="@{(view) -> clickHandle.clickHandle(view)}"
            android:padding="@dimen/_10sdp"
            android:text="@string/service_fragment"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/threadBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_button"
            android:onClick="@{(view) -> clickHandle.clickHandle(view)}"
            android:padding="@dimen/_10sdp"
            android:text="@string/thread_fragment"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/asyncTaskBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_button"
            android:onClick="@{(view) -> clickHandle.clickHandle(view)}"
            android:padding="@dimen/_10sdp"
            android:text="@string/asynctask_fragment"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>
</layout>