<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="clickHandle"
            type="com.testapp.utils.HandleClick" />
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/description"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/timeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:hint="@string/enter_time_to_launch_thread"
            android:inputType="number"
            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_button"
            android:onClick="@{(view) -> clickHandle.clickHandle(view)}"
            android:padding="@dimen/_10sdp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp" />


    </LinearLayout>
</layout>